Added MongoDB Logging Service

--- a/MovieAppBackEnd.WebAPI/log4net-example.config
+++ b/MovieAppBackEnd.WebAPI/log4net-example.config
@@ -7,7 +7,7 @@
   </appender>
 
   <appender name="MongoDBAppender" type="Log4Mongo.MongoDBAppender, Log4Mongo">
-    <connectionString value="mongodb+srv://admin:12345@movieappcluster.pjrjx.mongodb.net/MovieAppDb"/>
+    <connectionString value="mongodbconnectionstring"/>
     <collectionName value="Logs" />
     <field>
       <name value="Detail" />
