--- a/MovieAppBackEnd.WebAPI/log4net.config
+++ b/MovieAppBackEnd.WebAPI/log4net.config
@@ -2,14 +2,31 @@
 
 <log4net>
   <appender name="JsonFileAppender" type="log4net.Appender.FileAppender,log4net">
-    <file value="C://log.json" />
+    <file value="Log//log.json" />
     <layout type="MovieAppBackEnd.Core.CrossCuttingConcerns.Logging.Log4Net.Layouts.JsonLayout, MovieAppBackEnd.Core" ></layout>
   </appender>
+  
+  <appender name="MongoDBAppender" type="Log4Mongo.MongoDBAppender, Log4Mongo">
+    <connectionString value="mongodbconnectionstring"/>
+    <collectionName value="Logs" />
+    <field>
+      <name value="Detail" />
+      <layout type="MovieAppBackEnd.Core.CrossCuttingConcerns.Logging.Log4Net.Layouts.JsonLayout, MovieAppBackEnd.Core" />
+    </field>
+    <field>
+      <name value="Date" />
+      <layout type="log4net.Layout.PatternLayout" value="%date{dd'-'MM'-'yyyy HH':'mm':'ss'.'fff}" />
+    </field>
+    <field>
+      <name value="Audit" />
+      <layout type="log4net.Layout.PatternLayout" value="%level" />
+    </field>
+  </appender>
 
-  <appender name="SqlServerAppender" type="MicroKnights.Logging.AdoNetAppender, MicroKnights.Log4NetAdoNetAppender">
+  <!--<appender name="SqlServerAppender" type="MicroKnights.Logging.AdoNetAppender, MicroKnights.Log4NetAdoNetAppender">
     <bufferSize value="1" />
     <connectionType value="Microsoft.Data.SqlClient.SqlConnection, Microsoft.Data.SqlClient, Version=1.0.0.0,Culture=neutral,PublicKeyToken=23ec7fc2d6eaa4a5"/>
-    <connectionString value="Data Source=78.142.208.131\MSSQLSERVER2016;Initial Catalog=warrantytracking_db;User ID=warrantytracking_user;Password=sezer123" />
+    <connectionString value="Data Source=185.162.146.207;Initial Catalog=moviebackend_db;User ID=sa;Password=Sy123456789" />
     <commandText value="INSERT INTO Logs ([Detail],[Date],[Audit]) VALUES (@logDetail,@log_date,@audit)" />
 
     <parameter>
@@ -31,7 +48,7 @@
       <size value="50" />
       <layout type="log4net.Layout.PatternLayout" value="%level" />
     </parameter>
-  </appender>
+  </appender>-->
 
   <logger name="JsonFileLogger">
     <level value="All" />
@@ -40,6 +57,6 @@
 
   <logger name="DatabaseLogger">
     <level value="All" />
-    <appender-ref ref="SqlServerAppender" />
+    <appender-ref ref="MongoDBAppender" />
   </logger>
 </log4net>
